--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ img {
   animation-iteration-count: infinite;
 }
 
-.logo-accent {
+.logo__accent {
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 26px;
@@ -123,10 +123,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-media-link:hover,
-.social-media-link:focus,
-.footer-social-media-link:hover,
-.footer-social-media-link:focus {
+.social-media-link:hover, .social-media-link:focus {
   fill: #ffffff;
   background-color: var(--accent-color);
 }
@@ -137,6 +134,11 @@ img {
 
 .footer-social-media-link {
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.footer-social-media-link:hover, .footer-social-media-link:focus {
+  fill: #ffffff;
+  background-color: var(--accent-color);
 }
 
 .projects-btn-list {
@@ -165,17 +167,16 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.projects-btn:hover, .projects-btn:focus {
+  background-color: var(--accent-color);
+  color: #ffffff;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 .projects-btn.current {
   background-color: var(--accent-color);
   color: #ffffff;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.projects-btn:hover,
-.projects-btn:focus {
-  background-color: var(--accent-color);
-  color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .backdrop {
@@ -197,10 +198,6 @@ img {
   pointer-events: none;
 }
 
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(1.4);
-}
-
 .modal {
   position: absolute;
   left: 50%;
@@ -211,6 +208,10 @@ img {
   background-color: #ffffff;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.4);
 }
 
 .close-button {
@@ -273,10 +274,15 @@ img {
   padding-left: 42px;
   font-size: 16px;
   outline: none;
+  cursor: pointer;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-input:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-form-input:hover {
   border-color: var(--accent-color);
 }
 
@@ -300,6 +306,10 @@ img {
   fill: var(--accent-color);
 }
 
+.modal-form-input:hover + .modal-form-input-icon {
+  fill: var(--accent-color);
+}
+
 .modal-form-comment {
   width: 100%;
   height: 120px;
@@ -309,34 +319,16 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: none;
+  cursor: pointer;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-comment:focus {
+.modal-form-comment:focus, .modal-form-comment:hover {
   border-color: var(--accent-color);
 }
 
-.modal-form-comment::placeholder {
+.modal-form-comment:focus::placeholder, .modal-form-comment:hover::placeholder {
   color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
-  background-color: var(--accent-color);
-  background-image: url("../img/icon-check.svg");
-  background-size: contain;
-  border-color: var(--accent-color);
-}
-
-.modal-form-checkbox-label::before {
-  display: block;
-  content: '';
-  width: 16px;
-  height: 15px;
-  border: 2px solid #000000;
-  border-radius: 2px;
-  margin-right: 7px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  cursor: pointer;
 }
 
 .modal-form-checkbox-label {
@@ -351,16 +343,35 @@ img {
   color: #757575;
 }
 
+.modal-form-checkbox-label::before {
+  display: block;
+  content: '';
+  width: 16px;
+  height: 15px;
+  border: 2px solid #000000;
+  border-radius: 2px;
+  margin-right: 7px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
+
+.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
+  background-color: var(--accent-color);
+  background-image: url("../img/icon-check.svg");
+  background-size: contain;
+  border-color: var(--accent-color);
+}
+
+.modal-form-checkbox:focus + .modal-form-checkbox-label::before {
+  border-color: var(--accent-color);
+}
+
 .modal-form-label-link {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration-line: underline;
   color: var(--accent-color);
-}
-
-.modal-form-checkbox:focus + .modal-form-checkbox-label::before {
-  border-color: var(--accent-color);
 }
 
 .modal-form-submit {
@@ -403,11 +414,11 @@ img {
   align-items: center;
 }
 
-.menu-item:not(:last-child) {
+.menu__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.menu-link {
+.menu__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -415,17 +426,12 @@ img {
   color: var(--headings-color);
 }
 
-.menu-link:hover,
-.menu-link:focus {
-  color: var(--accent-color);
-}
-
-.menu-link.current {
+.menu__link.current {
   position: relative;
   color: var(--accent-color);
 }
 
-.menu-link.current::after {
+.menu__link.current::after {
   content: '';
   position: absolute;
   bottom: -32px;
@@ -436,7 +442,11 @@ img {
   border-radius: 2px;
 }
 
-.contact-link {
+.menu__link:hover, .menu__link:focus {
+  color: var(--accent-color);
+}
+
+.header__contact-link {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -446,8 +456,7 @@ img {
   color: var(--description-text-color);
 }
 
-.contact-link:hover,
-.contact-link:focus {
+.header__contact-link:hover, .header__contact-link:focus {
   color: var(--accent-color);
 }
 
@@ -456,12 +465,12 @@ img {
   margin-right: 50px;
 }
 
-.email-icon {
+.header__email-icon {
   margin-right: 10px;
   fill: currentColor;
 }
 
-.smartphone-icon {
+.header__smartphone-icon {
   margin-right: 10px;
   fill: currentColor;
 }
@@ -498,12 +507,6 @@ img {
   padding: 10px 32px;
   border-radius: 4px;
   border: 0;
-}
-
-.modal-btn:hover,
-.modal-btn:focus {
-  color: #ffffff;
-  background-color: var(--accent-color);
 }
 
 .advantages-list {
@@ -687,14 +690,13 @@ img {
   transition: filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.our-clients-image {
-  fill: #afb1b8;
-}
-
-.our-clients-link:hover,
-.our-clients-link:focus {
+.our-clients-link:hover, .our-clients-link:focus {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-color: var(--accent-color);
+}
+
+.our-clients-image {
+  fill: #afb1b8;
 }
 
 .our-clients-link:hover .our-clients-image,
@@ -738,23 +740,22 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.foot-logo {
-  display: block;
-  margin-bottom: 20px;
-}
-
 .footer-link.address {
   color: #ffffff;
   margin-bottom: 9px;
 }
 
-.footer-item:not(:last-child) {
-  margin-bottom: 9px;
+.footer-link:hover, .footer-link:focus {
+  color: #ffffff;
 }
 
-.footer-link:hover,
-.footer-link:focus {
-  color: #ffffff;
+.footer-logo {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.footer-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .footer-form-content {
@@ -793,7 +794,7 @@ img {
   border-color: rgba(255, 255, 255, 0.973);
 }
 
-.footer-form-input::placeholder {
+.footer-form-input:focus::placeholder {
   align-items: center;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
@@ -866,17 +867,12 @@ img {
 
 .examples-text-content {
   border: 1px solid #eeeeee;
-  padding: 20px 24px 20px 24px;
+  padding: 20px 24px;
 }
 
 .examples-link {
   display: block;
   position: relative;
-}
-
-.examples-link:hover .overlay,
-.examples-link:focus .overlay {
-  transform: translateY(0);
 }
 
 .examples-link-image-wrapper {
@@ -899,5 +895,10 @@ img {
   overflow: auto;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.examples-link:hover .overlay,
+.examples-link:focus .overlay {
+  transform: translateY(0);
 }
 /*# sourceMappingURL=main.css.map */
