--- a/sass/components/_main-logo.scss
+++ b/sass/components/_main-logo.scss
@@ -12,7 +12,7 @@
   animation-iteration-count: infinite;
 }
 
-.logo-accent {
+.logo__accent {
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 26px;
