--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,7 +1,3 @@
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(1.4);
-}
-
 .modal {
   position: absolute;
   left: 50%;
@@ -12,6 +8,10 @@
   background-color: #ffffff;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .backdrop.is-hidden & {
+    transform: translate(-50%, -50%) scale(1.4);
+  }
 }
 
 .close-button {
@@ -31,9 +31,9 @@
   width: 18px;
   height: 18px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.close-button:focus .close-button-img,
-.close-button:hover .close-button-img {
-  fill: var(--accent-color);
+  .close-button:focus &,
+  .close-button:hover & {
+    fill: var(--accent-color);
+  }
 }
