--- a/sass/layout/_footer-form.scss
+++ b/sass/layout/_footer-form.scss
@@ -28,16 +28,16 @@
   color: #ffffff;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
-}
 
-.footer-form-input:focus {
-  border-color: rgba(255, 255, 255, 0.973);
-}
+  &:focus {
+    border-color: rgba(255, 255, 255, 0.973);
 
-.footer-form-input::placeholder {
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+    &::placeholder {
+      align-items: center;
+      letter-spacing: 0.03em;
+      color: rgba(255, 255, 255, 0.6);
+    }
+  }
 }
 
 .footer-form-btn {
