--- a/sass/layout/_portfolio-examples.scss
+++ b/sass/layout/_portfolio-examples.scss
@@ -26,27 +26,21 @@
   margin-left: 30px;
   flex-basis: calc((100% - 90px) / 3);
   background-color: #ffffff;
-
   transition: filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.examples-item:hover {
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  &:hover {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
 }
 
 .examples-text-content {
   border: 1px solid #eeeeee;
-  padding: 20px 24px 20px 24px;
+  padding: 20px 24px;
 }
 
 .examples-link {
   display: block;
   position: relative;
-}
-
-.examples-link:hover .overlay,
-.examples-link:focus .overlay {
-  transform: translateY(0);
 }
 
 .examples-link-image-wrapper {
@@ -67,7 +61,11 @@
   height: 100%;
   width: 100%;
   overflow: auto;
-
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .examples-link:hover &,
+  .examples-link:focus & {
+    transform: translateY(0);
+  }
 }
