--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -39,3 +39,13 @@ img {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
+.title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--headings-color);
+  margin-bottom: 50px;
+}
